# task-scheduler

./: CMakeLists.txt  README.md  main.cpp  tasks.txt
data/: tasks.txt
include/: Logger.h  Scheduler.h  Task.h  TaskComparator.hpp  Timer.h
src/: Logger.cpp  Scheduler.cpp  Task.cpp  Timer.cpp
